--- a/RE4_CNS_TOOL/RE4_CNS_TOOL_BIG_ENDIAN/RE4_CNS_TOOL_BIG_ENDIAN.csproj
+++ b/RE4_CNS_TOOL/RE4_CNS_TOOL_BIG_ENDIAN/RE4_CNS_TOOL_BIG_ENDIAN.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C6029FDF-8BEE-4E01-9EE1-AACE1BAAE185}</ProjectGuid>
+    <ProjectGuid>{9E63C3A0-D200-4B10-860F-766C751846C4}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>RE4_CNS_TOOL</RootNamespace>
-    <AssemblyName>RE4_CNS_TOOL</AssemblyName>
+    <RootNamespace>RE4_CNS_TOOL_BIG_ENDIAN</RootNamespace>
+    <AssemblyName>RE4_CNS_TOOL_BIG_ENDIAN</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -25,18 +25,20 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
+    <DebugType>embedded</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>
+    </DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <PropertyGroup>
     <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>RE4_CNS_TOOL.Program</StartupObject>
+    <StartupObject>RE4_CNS_TOOL_BIG_ENDIAN.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -49,13 +51,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Extract.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repack.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <Import Project="..\RE4_CNS_TOOL\RE4_CNS_TOOL.projitems" Label="Shared" />
+  <Import Project="..\SimpleEndianBinaryIO\SimpleEndianBinaryIO.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
